fix cell alignment

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ span {
 	z-index:1;
 	left: 100;
 	top:300;
-	width:80%;
+	width:90%;
 	height:70%;
 	margin-top: 100px;
 	margin-left:50px;
